[package]
name = "tom_party"
version = "0.1.0"
authors = ["tomGER <github@tomger.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
redis = "0.17.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]